2008-09-10  Claude Paroz  <claude@2xlibre.net>

	* translation-teams.xml.in: Add sr@latin (replacement for sr@Latn).

2008-09-07  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* people.xml.in: Add hackergotchi for Vincent van
	Adrighem.

2008-09-06  Gil Forcada  <gforcada@gnome.org>

	* gnome-modules.xml.in: Conduit branched for GNOME 2.24.

2008-09-05  Jonh Wendell  <jwendell@gnome.org>

	* gnome-modules.xml.in: Added maintainer info for vino and vinagre.
	* people.xml.in: Added myself.

2008-09-05  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: gvfs branched for 2.24.

2008-09-04 Gil Forcada <gforcada@gnome.org>

	* gnome-modules.xml.in:
	* releases.xml.in: gnome-power-manager branched for GNOME 2.24.

2008-09-04 Gil Forcada <gforcada@gnome.org>

	* gnome-modules.xml.in:
	* releases.xml.in: Sound-juicer branched for GNOME 2.24.

2008-09-03  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in: Fixed bugzilla link for gst-* family.

2008-09-02  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in: Enforced string freeze for GNOME 2.24.

2008-08-30 Gil Forcada <gforcada@gnome.org>

	* gnome-modules.xml.in:
	* releases.xml.in: Removed evolution-caldav.

2008-08-30 Gil Forcada <gforcada@gnome.org>

	* gnome-modules.xml.in:
	* releases.xml.in: Totem and totem-pl-parser branched for GNOME 2.24.

2008-08-30  Claude Paroz  <claude@2xlibre.net>

	* module.py: Do computation in render() instead of __init__() for
	ListModulesRequest, so as XmlModules are only loaded once.
	* releases.xml.in: Added 'master' branch to avahi.

2008-08-30  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: gok branched for 2.22, added avahi module in
	freedesktop.
	* people.xml.in: Added Lennart.
	* modules.py: Defines "Enter bug" and "i18n bugs" URLs depending on bug
	tracking type.
	* templates/module.tmpl: Use the URLs defined in modules.py.

2008-08-26 Gil Forcada <gforcada@gnome.org>

	* gnome-modules.xml.in: