@@ -702,7 +702,7 @@
     <category id="desktop">
       <_description>GNOME desktop</_description>
       <module id="alacarte"/>
-      <module id="bug-buddy"/>
+      <module id="bug-buddy" branch="gnome-2-24"/>
       <module id="cheese"/>
       <module id="dasher"/>
       <module id="deskbar-applet"/>
