@@ -1,3 +1,8 @@
+2008-09-11 Gil Forcada  <gforcada@gnome.org>
+
+	* gnome-modules.xml.in:
+	* releases.xml.in: bug-buddy branched for 2.24.
+
 2008-09-10  Claude Paroz  <claude@2xlibre.net>
 
 	* translation-teams.xml.in: Add sr@latin (replacement for sr@Latn).
